fixed nav menu dropdown hover interaction

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
     <div class="list-wrapper">
 
-      <menu aria-label="Primary Navigation">
+      <menu aria-label="Primary Navigation" id="primary">
 
         <li class="services">
           <button>
