--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </dl>
           </section>
         </li>
-        <li class="applications">
+        <li class="applications wide">
           <button>
             <h2>Applications</h2>
           </button>
@@ -214,7 +214,7 @@
             </dl>
           </section>
         </li>
-        <li class="resources applications">
+        <li class="resources wide">
           <button>
             <h2>Resources</h2>
           </button>
