added back button for mobile nav

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
       <menu aria-label="Primary Navigation" id="primary">
 
         <li class="services">
-          <button>
+          <button class="open">
             <h2>Services</h2>
           </button>
           <section id="">
-            <dl>
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <dl class="header">
               <dt>
                 <h3>Services Overview</h3>
               </dt>
@@ -106,14 +109,17 @@
           </section>
         </li>
         <li class="applications wide">
-          <button>
+          <button class="open">
             <h2>Applications</h2>
           </button>
           <section id="">
-
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <div class="wide-wrap">
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Application Overview</h3>
@@ -136,7 +142,7 @@
 
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Research Areas</h3>
@@ -153,15 +159,18 @@
               </dl>
 
             </div>
-
+</div>
           </section>
         </li>
         <li class="approach">
-          <button>
+          <button class="open">
             <h2>Our Approach</h2>
           </button>
           <section id="">
-            <dl>
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <dl class="header">
               <dt>
                 <h3>Approach Overview</h3>
               </dt>
@@ -214,15 +223,18 @@
             </dl>
           </section>
         </li>
-        <li class="resources wide">
-          <button>
+        <li class="resourced wide">
+          <button class="open">
             <h2>Resources</h2>
           </button>
           <section id="">
-
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <div class="wide-wrap">
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Resources Overview</h3>
@@ -236,13 +248,16 @@
                 <a href="#">Sort-SEQ</a>
                 <a href="#">10x Genomics</a>
                 <a href="#">VASA-SEQ</a>
+                <a href="#">Sort-SEQ</a>
+                <a href="#">10x Genomics</a>
+                <a href="#">VASA-SEQ</a>
               </dl>
 
             </div>
 
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Research Areas</h3>
@@ -256,21 +271,21 @@
                 <a href="#">Sort-SEQ</a>
                 <a href="#">10x Genomics</a>
                 <a href="#">VASA-SEQ</a>
-                <a href="#">Sort-SEQ</a>
-                <a href="#">10x Genomics</a>
-                <a href="#">VASA-SEQ</a>
               </dl>
 
             </div>
-
+</div>
           </section>
         </li>
         <li class="about">
-          <button>
+          <button class="open">
             <h2>About</h2>
           </button>
           <section id="">
-            <dl>
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <dl class="header">
               <dt>
                 <h3>About Overview</h3>
               </dt>
@@ -377,16 +392,18 @@
       <menu aria-label="Primary Navigation" id="primary">
 
         <li class="services">
-          <button>
+          <button class="open">
             <h2>Services</h2>
           </button>
           <section id="">
-            <dl>
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <dl class="header">
               <dt>
                 <h3>Services Overview</h3>
               </dt>
-              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                canibutier eros
+              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
             <a href="#">
@@ -430,27 +447,30 @@
                   <h3>Research & Development</h3>
                 </a>
               </dt>
-              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                canibutier erosmobi.</dd>
+              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier
+                erosmobi.</dd>
             </dl>
           </section>
         </li>
         <li class="applications wide">
-          <button>
+          <button class="open">
             <h2>Applications</h2>
           </button>
           <section id="">
-
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <div class="wide-wrap">
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Application Overview</h3>
                   </a>
                 </dt>
-                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                  canibutier eros mobi.</dd>
+                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
+                  mobi.</dd>
               </dl>
 
               <dl>
@@ -466,14 +486,14 @@
 
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Research Areas</h3>
                   </a>
                 </dt>
-                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                  canibutier erosmobi.</dd>
+                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier
+                  erosmobi.</dd>
               </dl>
 
               <dl>
@@ -483,20 +503,22 @@
               </dl>
 
             </div>
-
+</div>
           </section>
         </li>
         <li class="approach">
-          <button>
+          <button class="open">
             <h2>Our Approach</h2>
           </button>
           <section id="">
-            <dl>
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <dl class="header">
               <dt>
                 <h3>Approach Overview</h3>
               </dt>
-              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                canibutier eros
+              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
             <a href="#">
@@ -539,32 +561,37 @@
                 <dt>
                   <h3>Research & Development</h3>
                 </dt>
-                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                  canibutier eros
+                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                   mobi.</dd>
               </a>
             </dl>
           </section>
         </li>
-        <li class="resources wide">
-          <button>
+        <li class="resourced wide">
+          <button class="open">
             <h2>Resources</h2>
           </button>
           <section id="">
-
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <div class="wide-wrap">
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Resources Overview</h3>
                   </a>
                 </dt>
-                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                  canibutier eros mobi.</dd>
+                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
+                  mobi.</dd>
               </dl>
 
               <dl>
+                <a href="#">Sort-SEQ</a>
+                <a href="#">10x Genomics</a>
+                <a href="#">VASA-SEQ</a>
                 <a href="#">Sort-SEQ</a>
                 <a href="#">10x Genomics</a>
                 <a href="#">VASA-SEQ</a>
@@ -574,40 +601,39 @@
 
             <div class="subnav-wrapper">
 
-              <dl>
+              <dl class="header">
                 <dt>
                   <a href="#">
                     <h3>Research Areas</h3>
                   </a>
                 </dt>
-                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                  canibutier erosmobi.</dd>
+                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier
+                  erosmobi.</dd>
               </dl>
 
               <dl>
-                <a href="#">Sort-SEQ</a>
-                <a href="#">10x Genomics</a>
-                <a href="#">VASA-SEQ</a>
                 <a href="#">Sort-SEQ</a>
                 <a href="#">10x Genomics</a>
                 <a href="#">VASA-SEQ</a>
               </dl>
 
             </div>
-
+</div>
           </section>
         </li>
         <li class="about">
-          <button>
+          <button class="open">
             <h2>About</h2>
           </button>
           <section id="">
-            <dl>
+            <div class="mobile-back">
+              <button class="close">Return to Menu</button>
+            </div>
+            <dl class="header">
               <dt>
                 <h3>About Overview</h3>
               </dt>
-              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                canibutier eros
+              <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
             <a href="#">
@@ -650,8 +676,7 @@
                 <dt>
                   <h3>Research & Development</h3>
                 </dt>
-                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet
-                  canibutier eros
+                <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                   mobi.</dd>
               </a>
             </dl>
