--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <dl class="header">
               <dt>
@@ -62,7 +62,7 @@
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
-            <a href="#">
+            <a class="arrow-link" href="#">
               <h4>Single Cell Sequencing</h4>
             </a>
             <dl>
@@ -99,7 +99,7 @@
             </dl>
             <dl>
               <dt>
-                <a href="#">
+                <a class="arrow-link" href="#">
                   <h3>Research & Development</h3>
                 </a>
               </dt>
@@ -114,7 +114,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <div class="wide-wrap">
             <div class="subnav-wrapper">
@@ -168,7 +168,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <dl class="header">
               <dt>
@@ -177,7 +177,7 @@
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
-            <a href="#">
+            <a class="arrow-link" href="#">
               <h4>Single Cell Sequencing</h4>
             </a>
             <dl>
@@ -213,13 +213,15 @@
               </a>
             </dl>
             <dl>
-              <a href="#">
+
                 <dt>
+                  <a class="arrow-link" href="#">
                   <h3>Research & Development</h3>
+                  </a>
                 </dt>
                 <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                   mobi.</dd>
-              </a>
+
             </dl>
           </section>
         </li>
@@ -229,7 +231,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <div class="wide-wrap">
             <div class="subnav-wrapper">
@@ -283,7 +285,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <dl class="header">
               <dt>
@@ -292,7 +294,7 @@
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
-            <a href="#">
+            <a class="arrow-link" href="#">
               <h4>Single Cell Sequencing</h4>
             </a>
             <dl>
@@ -328,13 +330,15 @@
               </a>
             </dl>
             <dl>
-              <a href="#">
+
                 <dt>
+                  <a class="arrow-link" href="#">
                   <h3>Research & Development</h3>
+                </a>
                 </dt>
                 <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                   mobi.</dd>
-              </a>
+
             </dl>
           </section>
         </li>
@@ -346,7 +350,6 @@
 
       <aside>
         <menu aria-label="Secondary Navigation">
-
           <li>
             <div class="text-input-wrapper dark">
               <button>
@@ -397,7 +400,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <dl class="header">
               <dt>
@@ -406,7 +409,7 @@
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
-            <a href="#">
+            <a class="arrow-link" href="#">
               <h4>Single Cell Sequencing</h4>
             </a>
             <dl>
@@ -443,7 +446,7 @@
             </dl>
             <dl>
               <dt>
-                <a href="#">
+                <a class="arrow-link" href="#">
                   <h3>Research & Development</h3>
                 </a>
               </dt>
@@ -458,7 +461,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <div class="wide-wrap">
             <div class="subnav-wrapper">
@@ -512,7 +515,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <dl class="header">
               <dt>
@@ -521,7 +524,7 @@
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
-            <a href="#">
+            <a class="arrow-link" href="#">
               <h4>Single Cell Sequencing</h4>
             </a>
             <dl>
@@ -557,13 +560,15 @@
               </a>
             </dl>
             <dl>
-              <a href="#">
+
                 <dt>
+                  <a class="arrow-link" href="#">
                   <h3>Research & Development</h3>
+                  </a>
                 </dt>
                 <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                   mobi.</dd>
-              </a>
+
             </dl>
           </section>
         </li>
@@ -573,7 +578,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <div class="wide-wrap">
             <div class="subnav-wrapper">
@@ -627,7 +632,7 @@
           </button>
           <section id="">
             <div class="mobile-back">
-              <button class="close">Return to Menu</button>
+              <button class="close">Main Menu</button>
             </div>
             <dl class="header">
               <dt>
@@ -636,7 +641,7 @@
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
             </dl>
-            <a href="#">
+            <a class="arrow-link" href="#">
               <h4>Single Cell Sequencing</h4>
             </a>
             <dl>
@@ -672,13 +677,15 @@
               </a>
             </dl>
             <dl>
-              <a href="#">
+
                 <dt>
+                  <a class="arrow-link" href="#">
                   <h3>Research & Development</h3>
+                </a>
                 </dt>
                 <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                   mobi.</dd>
-              </a>
+
             </dl>
           </section>
         </li>
