--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Single Cell Discoveries</title>
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="css/main.css" />
@@ -123,7 +123,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Application Overview</h3>
                   </a>
                 </dt>
@@ -146,7 +146,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Research Areas</h3>
                   </a>
                 </dt>
@@ -240,7 +240,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Resources Overview</h3>
                   </a>
                 </dt>
@@ -263,7 +263,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Research Areas</h3>
                   </a>
                 </dt>
@@ -470,7 +470,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Application Overview</h3>
                   </a>
                 </dt>
@@ -493,7 +493,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Research Areas</h3>
                   </a>
                 </dt>
@@ -587,7 +587,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Resources Overview</h3>
                   </a>
                 </dt>
@@ -610,7 +610,7 @@
 
               <dl class="header">
                 <dt>
-                  <a href="#">
+                  <a class="arrow-link" href="#">
                     <h3>Research Areas</h3>
                   </a>
                 </dt>
