fixed type style colors and weights

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             </div>
             <dl class="header">
               <dt>
-                <h3>Services Overview</h3>
+                <a class="arrow-link" href="#">
+                  <h3>Services Overview</h3>
+                </a>
               </dt>
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
@@ -406,7 +408,9 @@
             </div>
             <dl class="header">
               <dt>
-                <h3>Services Overview</h3>
+                <a class="arrow-link" href="#">
+                  <h3>Services Overview</h3>
+                </a>
               </dt>
               <dd>Sit augue a at nisl ullamcorper facillisis cul auctom ulitricies sed donec torquet canibutier eros
                 mobi.</dd>
