added tabindex for ios focus state workaround

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </a>
 
     <div class="hamburger">
-      <button>
+      <button tabindex="0">
         <span></span>
         <span></span>
         <span></span>
@@ -388,7 +388,7 @@
       </figure>
     </a>
     <div class="hamburger">
-      <button>
+      <button tabindex="0">
         <span></span>
         <span></span>
         <span></span>
