decreased font fluid scaling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <nav>
 
-    <a href="/">
+    <a href="#">
       <figure id="logo">
         <img alt="Text description of logo and mark" src="
               data:image/svg+xml;base64,
@@ -376,7 +376,7 @@
 
   <nav id="light-mode">
 
-    <a href="/">
+    <a href="#">
       <figure id="logo">
         <img alt="Text description of logo and mark" src="
           data:image/svg+xml;base64,
