added images and videos

--- a/index.html
+++ b/index.html
@@ -725,7 +725,11 @@
 
   <main id="home">
     <header class="hero text-style-wrapper dark">
-      <div class="vid-frame"></div>
+      <div class="vid-frame">
+        <video autoplay loop muted playsinline>
+          <source type="video/mp4" src="/img/hero.mp4">
+        </video>
+      </div>
       <div class="txt-frame">
         <div class="txt-style-wrapper t1">
           <h1>Single Cell <span class="grad-mask">Innovation </span><span class="no-wrap">at Scale</span></h1>
@@ -745,23 +749,23 @@
       <dl>
         <div>
           <dd>Mount Sinai</dd>
-          <dt></dt>
+          <dt><img src="/img/mount-sinai.png"></dt>
         </div>
         <div>
           <dd>Hubrecht Institute</dd>
-          <dt></dt>
+          <dt><img src="/img/Hubrecht.png"></dt>
         </div>
         <div>
           <dd>Genmab</dd>
-          <dt></dt>
+          <dt><img src="/img/Genmab.png"></dt>
         </div>
         <div>
           <dd>Heinrich Heine</dd>
-          <dt></dt>
+          <dt><img src="/img/Heinrich.png"></dt>
         </div>
         <div>
           <dd>Sanquin</dd>
-          <dt></dt>
+          <dt><img src="/img/Sanquin.png"></dt>
         </div>
       </dl>
     </section>
