added images and videos

--- a/index.html
+++ b/index.html
@@ -749,28 +749,28 @@
       <dl>
         <div>
           <dd>Mount Sinai</dd>
-          <dt><img src="https://github.com/icscreative/scd/blob/master/img/mount-sinai.png"></dt>
+          <dt><img src="/img/mount-sinai.png"></dt>
         </div>
         <div>
           <dd>Hubrecht Institute</dd>
-          <dt><img src="https://github.com/icscreative/scd/blob/master/img/Hubrecht.png"></dt>
+          <dt><img src="/img/Hubrecht.png"></dt>
         </div>
         <div>
           <dd>Genmab</dd>
-          <dt><img src="https://github.com/icscreative/scd/blob/master/img/Genmab.png"></dt>
+          <dt><img src="/img/Genmab.png"></dt>
         </div>
         <div>
           <dd>Heinrich Heine</dd>
-          <dt><img src="https://github.com/icscreative/scd/blob/master/img/Heinrich.png"></dt>
+          <dt><img src="/img/Heinrich.png"></dt>
         </div>
         <div>
           <dd>Sanquin</dd>
-          <dt><img src="https://github.com/icscreative/scd/blob/master/img/Sanquin.png"></dt>
+          <dt><img src="/img/Sanquin.png"></dt>
         </div>
       </dl>
     </section>
     <section class="services">
-      <img class="floating-dots" src="https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9https://github.com/icscreative/scd/blob/master/img/dots.svg">
+      <img class="floating-dots" src="/img/dots.svg">
       <div class="intro">
         <h2 class="s1">Our Services</h2>
         <p class="t3">We currently offer <b>single-cell, spatial,</b> and <b>bulk</b> transcriptomics.</p>
