--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
     <header class="hero text-style-wrapper dark">
       <div class="vid-frame">
         <video autoplay loop muted playsinline>
-          <source type="video/mp4" src="/img/hero.mp4">
+          <source type="video/mp4" src="https://github.com/icscreative/scd/blob/b7e3876a61e999eaf1bf868942d53dbde2e3d35c/img/hero.mp4">
         </video>
       </div>
       <div class="txt-frame">
@@ -749,28 +749,28 @@
       <dl>
         <div>
           <dd>Mount Sinai</dd>
-          <dt><img src="/img/mount-sinai.png"></dt>
+          <dt><img src="https://github.com/icscreative/scd/blob/b7e3876a61e999eaf1bf868942d53dbde2e3d35c/img/mount-sinai.png"></dt>
         </div>
         <div>
           <dd>Hubrecht Institute</dd>
-          <dt><img src="/img/Hubrecht.png"></dt>
+          <dt><img src="https://github.com/icscreative/scd/blob/b7e3876a61e999eaf1bf868942d53dbde2e3d35c/img/Hubrecht.png"></dt>
         </div>
         <div>
           <dd>Genmab</dd>
-          <dt><img src="/img/Genmab.png"></dt>
+          <dt><img src="https://github.com/icscreative/scd/blob/b7e3876a61e999eaf1bf868942d53dbde2e3d35c/img/Genmab.png"></dt>
         </div>
         <div>
           <dd>Heinrich Heine</dd>
-          <dt><img src="/img/Heinrich.png"></dt>
+          <dt><img src="https://github.com/icscreative/scd/blob/b7e3876a61e999eaf1bf868942d53dbde2e3d35c/img/Heinrich.png"></dt>
         </div>
         <div>
           <dd>Sanquin</dd>
-          <dt><img src="/img/Sanquin.png"></dt>
+          <dt><img src="https://github.com/icscreative/scd/blob/b7e3876a61e999eaf1bf868942d53dbde2e3d35c/img/Sanquin.png"></dt>
         </div>
       </dl>
     </section>
     <section class="services">
-      <img class="floating-dots" src="/img/dots.svg">
+      <img class="floating-dots" src="https://github.com/icscreative/scd/blob/b7e3876a61e999eaf1bf868942d53dbde2e3d35c/img/dots.svg">
       <div class="intro">
         <h2 class="s1">Our Services</h2>
         <p class="t3">We currently offer <b>single-cell, spatial,</b> and <b>bulk</b> transcriptomics.</p>
