adjusted font scale

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
       </div>
       <div class="txt-frame">
         <div class="txt-style-wrapper t1">
-          <h1>Single Cell <span class="grad-mask">Innovation </span><span class="no-wrap">at Scale</span></h1>
+          <h1 class="t1">Single Cell <span class="grad-mask">Innovation </span><span class="no-wrap">at Scale</span></h1>
         </div>
         <div class="split">
           <div class="p2">
@@ -881,7 +881,7 @@
 
       <h2 class="t2">Recent <b>Publications</b></h2>
       <ul class="card-list">
-        <li class="alt">
+        <li class="alt pad">
           <p class="s3">Janury 2023</p>
           <p class="s1">Nature Cardiovascular Reasearch</p>
           <p class="p1">Single-cell T cell receptor sequencing of paired human atherosclerotic plaques and blood reveals autoimmune-like features of expanded T cells</p>
@@ -891,7 +891,7 @@
             <div class="tag s3">Human</div>
           </div>
         </li>
-        <li class="alt">
+        <li class="alt pad">
           <p class="s3">Janury 2023</p>
           <p class="s1">PNAS</p>
           <p class="p1">Mammalian life depends on two distinct pathways of DNA damage tolerance</p>
@@ -901,7 +901,7 @@
             <div class="tag s3">Kidney</div>
           </div>
         </li>
-        <li class="alt">
+        <li class="alt pad">
           <p class="s3">Janury 2023</p>
           <p class="s1">Cell Death Discovery</p>
           <p class="p1">A microfluidic-based PDAC organoid reveals the impact of hypoxia in response to tratment</p>
