added supercharger wheel

--- a/index.html
+++ b/index.html
@@ -841,6 +841,54 @@
         </div>
       </div>
     </section>
+    <section class="wheel">
+      <h2 class="t1">How <span class="grad-mask">we supercharge</span> your research</h2>
+      <div class="supercharge">
+        <div class="txt-block c1">
+          <h3 class="t6">Project Design</h3>
+          <ul>
+            <li>
+              <p class="p3">Strategize with our PhD-level account executives to decide between multiple single-cell technologies, including two exclusively offered by us.</p>
+            </li>
+            <li>
+              <p class="p3">Leverage our experience with 200+ clients over 1000+ unique projects.</p>
+            </li>
+          </ul>
+        </div>
+        <div class="radial-container">
+          <div class="mask">
+            <div class="radial c3"></div>
+            <div class="radial c2"></div>
+            <div class="radial m1"></div>
+            <div class="radial c1"></div>
+            <div class="base"></div>
+            <img src="/docs/assets/wheel-center.png">
+          </div>
+        </div>
+        <div class="txt-block c2">
+          <h3 class="t6">Sample Processing</h3>
+          <ul>
+            <li>
+              <p class="p3">Strategize with our PhD-level account executives to decide between multiple single-cell technologies, including two exclusively offered by us.</p>
+            </li>
+            <li>
+              <p class="p3">Leverage our experience with 200+ clients over 1000+ unique projects.</p>
+            </li>
+          </ul>
+        </div>
+        <div class="txt-block c3">
+          <h3 class="t6">Data Analysis</h3>
+          <ul>
+            <li>
+              <p class="p3">Strategize with our PhD-level account executives to decide between multiple single-cell technologies, including two exclusively offered by us.</p>
+            </li>
+            <li>
+              <p class="p3">Leverage our experience with 200+ clients over 1000+ unique projects.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <section class="resources">
       <div class="split">
         <div>
