adjusted supercharger wheel

--- a/index.html
+++ b/index.html
@@ -856,6 +856,7 @@
           </ul>
         </div>
         <div class="radial-container">
+          <div class="shim"></div>
           <div class="mask">
             <div class="radial c3"></div>
             <div class="radial c2"></div>
@@ -864,7 +865,7 @@
             <div class="base"></div>
             <img src="docs/assets/wheel-center.png">
           </div>
-        </div>
+          </div>
         <div class="txt-block c2">
           <h3 class="t6">Sample Processing</h3>
           <ul>
